part3/3.02/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: djblackett/pingpong:v2.07.2
          ports:
          - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: ping-pong-svc
spec:
  type: NodePort
  selector:
    app: ping-pong # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
